# axon-encoder

./: .codacy.yml  .codecov.yml  .gitignore  Cargo.toml  LICENSE-MIT  README.md  REVIEW.md  qodana.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  coverage.yml  junie-tag.yml  qodana_code_quality.yml
.mimocode/plans/: 1783751850984-kind-wizard.md
benches/: allocations.rs  encoders.rs
examples/: delta_encoding.rs  latency_encoding.rs  ndarray_encoding.rs  phase_encoding.rs  population_encoding.rs  predictive_encoding.rs  rate_encoding.rs  temporal_encoding.rs
src/: encoder.rs  error.rs  lib.rs  modulators.rs  ndarray_ext.rs  poisson.rs  rng.rs  spike_encoder.rs  types.rs
src/encoders/: delta.rs  derivative.rs  latency.rs  mod.rs  neuromod.rs  phase.rs  population.rs  predictive.rs  rate.rs  temporal.rs
tests/: modulated_encoder_tests.rs  serde_tests.rs
