[package]
name = "axon-encoder"
version = "0.4.0"
description = "Flexible sensory encoding pipelines for spiking neural networks — rate, temporal, predictive, population, and neuromodulator-driven encoding for telemetry and cyber-physical data."
repository = "https://github.com/Limen-Neural/axon-encoder"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.2"
serde_json = "1.0"

[features]
default = []
cuda = []
serde = ["dep:serde"]

[[bench]]
name = "encoders"
harness = false

[[bench]]
name = "allocations"
harness = false
